# extension

./: .gitignore  ARCHITECTURE_REVIEW_COMPLETE.md  AUDIT.md  CHANGELOG.md  CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.backend  Dockerfile.extension  LICENSE  MOCKS.md  Makefile  PROYECTO_MIRAKL_CSV_FIRST_MVP.txt  README.md  README_COMPLETE.md  REVIEW_FINAL_SUMMARY.md  SYSTEM_STATUS.md  build-simple.ps1  demo.html  docker-compose.yml  env.example  json_to_postman.json  login.json  test-auth-flow.ps1  test-auth-simple.ps1  test-dashboard.ps1  test-frontend-simulation.ps1  test-simple.ps1  test_endpoints.ps1  ver-logs.ps1
backend/: Dockerfile  README.md  endpoint-testing.ps1  env.example  orders_storage.json  pyproject.toml  requirements.txt  test_gls_simple.py  test_gls_standalone.py
backend/app/: __init__.py  main.py
backend/app/adapters/carriers/: __init__.py  correosex.py  dhl.py  gls.py  ontime.py  seur.py  tipsa.py  ups.py
backend/app/adapters/interfaces/: carrier.py  marketplace.py
backend/app/adapters/marketplaces/: __init__.py  mirakl.py
backend/app/api/: auth.py  carriers.py  health.py  logs.py  map_router.py  marketplaces.py  orchestrator.py  orders.py  routers.py  ship_router.py  tracking_router.py
backend/app/core/: auth.py  logging.py  settings.py  unified_order_logger.py  webhook_service.py
backend/app/core/utils/: http_client.py  utils.py
backend/app/models/: order.py
backend/app/rules/: __init__.py  engine.py  selector.py
backend/app/services/: gls_tracking_poller.py  order_storage.py  tipsa.py
backend/app/utils/: csv_logger.py  csv_ops_logger.py
backend/tests/: __init__.py  conftest.py  test_carrier_adapters.py  test_csv_logging.py  test_logs_endpoints.py  test_orchestrator.py  test_orchestrator_endpoints.py  test_rules_selector.py
backend/tests/integration/: test_logging_csv.py
backend/tests/unit/: test_models.py  test_tipsa_mapping.py
demo/: Dockerfile  Dockerfile.mirakl  mirakl-server.js  package.json  server.js
docker/: backend.Dockerfile  docker-compose.complete.yml  docker-compose.extension.yml  docker-compose.final.yml  docker-compose.full.yml  docker-compose.simple.yml  docker-compose.yml  extension.Dockerfile
docs/: ARCHITECTURE.md  ARCHITECTURE_AND_DOCUMENTATION_FIX_PLAN.md  CLEANUP_NOTES.md  ENDPOINTS.md  FLOWS.md  GLS_IMPLEMENTATION_SUMMARY.md  GLS_INTEGRATION.md  GLS_QUICKSTART.md  GLS_TESTING_GUIDE.md  LOGGING.md  MVP_PLAN.md  README.md  RUNBOOK.md  VALIDATION_CHECKLIST.md  gls-env-example.txt
downloads/: carrefour_orders.csv  orders (2).csv
extension/: .eslintrc.js  Dockerfile  FRONTEND_ENV_README.md  README.md  build-clean.ps1  check-types.js  create-icons.cjs  env.example  fix-paths.cjs  jest.config.js  package-lock.json  package.json  playwright.config.ts  requirements-frontend.txt  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
extension-mvp/: background.js  content.js  manifest.json  popup.html  popup.js
extension-simple/: background.js  content.js  manifest.json  popup.html  popup.js
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
mocks/: Dockerfile.mirakl  Dockerfile.tipsa  mirakl-mock.py  run-mocks.py  tipsa-mock.py
scripts/: build-all.ps1  check-all.ps1  check-system.ps1  clean-all.ps1  clean.ps1  clean.sh  start-fixed.ps1  start-system.ps1  start.ps1  start.sh  stop.ps1  stop.sh  verify-build.ps1  verify-complete-system.ps1  verify-complete.ps1  verify-logs.py  verify-simple.ps1  verify-system.ps1  verify.ps1  verify.sh
test-backend/: Dockerfile  app.py
tests/: package-lock.json  package.json  playwright.config.ts  portal-server.js
(+62 files in other folders)
